--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ButtonSmile</title>
-    <link rel="stylesheet" href="/css/style.css" class="rel">
+    <link rel="stylesheet" href="/ButtonSmile/css/style.css" class="rel">
 </head>
 
 <body>
